# vocal-ct

./: .make_prefs  CONTRIBUTORS.txt  Doxyfile  LICENSE.txt  Makefile  README.CANDELA  README_BUILD.txt  README_HUNTGROUPS  README_PACKAGES.txt  README_RTP.txt  README_VOCAL.txt  config.cache  config.status  configure  configure.in  vocal.dsw
cdr/: README
cdr/cdrLib/: CdrData.cxx  CdrData.hxx  CdrInterface.cxx  CdrInterface.hxx  Makefile  VCdrException.hxx
cdr/cdrServer/: CdrBilling.cxx  CdrBilling.hxx  CdrCache.cxx  CdrCache.hxx  CdrConfig.cxx  CdrConfig.hxx  CdrFileHandler.cxx  CdrFileHandler.hxx  CdrManager.cxx  CdrManager.hxx  CdrMarshal.cxx  CdrMarshal.hxx  CdrServer.cxx  CdrServer.hxx  CdrUserCache.cxx  CdrUserCache.hxx  EventObj.cxx  EventObj.hxx  Makefile  MindClient.cxx  MindClient.hxx  README  RadiusStack.cxx  RadiusStack.hxx  StringHash.hxx  VRadiusException.hxx  cdr.cfg  cdr_common.hxx  (+1 more)
config/: closewindows  cpl.dtd  startwindows
contrib/: Makefile  Makefile.pkg
doc/: CHANGELOG.txt  LIMITATIONS.txt  PROGRAMMING.txt  RELEASE_NOTES.txt  TESTING.txt
install/: Makefile  README  deploy.cxx  deployedServers.dtd  install.txt
libmedia/: ADD_CODEC.README  Adaptor.cxx  Adaptor.hxx  AudioThread.cxx  AudioThread.hxx  CodecAdaptor.cxx  CodecAdaptor.hxx  CodecG711U.cxx  CodecG711U.hxx  CodecG711a.cxx  CodecG711a.hxx  CodecG726_16.cxx  CodecG726_16.hxx  CodecG726_24.cxx  CodecG726_24.hxx  CodecG726_32.cxx  CodecG726_32.hxx  CodecG726_40.cxx  CodecG726_40.hxx  CodecG729a.cxx  CodecG729a.hxx  CodecSpeex.cxx  CodecSpeex.hxx  CodecTelEvent.cxx  CodecTelEvent.hxx  Def.hxx  MRtpSession.cxx  MRtpSession.hxx  Makefile  MediaCapability.cxx  MediaCapability.hxx  MediaController.cxx  MediaController.hxx  MediaDevice.cxx  MediaDevice.hxx  MediaException.hxx  MediaSession.cxx  MediaSession.hxx  NetworkRes.cxx  NetworkRes.hxx  (+3 more)
libsoundcard/: Makefile  SoundCard.cxx  SoundCard.hxx  test.cxx  testsound.cxx
manpages/: Makefile  README  allinoneconfigure.xml  b2bua.xml  fs.xml  generate.pl  lz.xml  mkoptions.pl  ms.xml  pserver.xml  rs.xml  sipset.xml  vmserver.xml  vocal.xml  vocalconf.xml  vocalctl.xml  vocald.xml
radius/: Makefile  README  RadiusAttribute.cxx  RadiusAttribute.hxx  RadiusData.hxx  RadiusMessage.cxx  RadiusMessage.hxx  VRadiusException.hxx  radius.dsp  radius.h
release/: build-release.pl  build-release.sh  release-sip-0.1.8  release-versions.sh
rtp/: .cvsignore  ChangLog  DTMFInterface.hxx  Makefile  NtpTime.cxx  NtpTime.hxx  RFC1889.txt  RFC1890.txt  Rtcp.hxx  RtcpPacket.cxx  RtcpPacket.hxx  RtcpReceiver.cxx  RtcpReceiver.hxx  RtcpTransmitter.cxx  RtcpTransmitter.hxx  Rtp.hxx  RtpEvent.cxx  RtpEvent.hxx  RtpEventReceiver.cxx  RtpEventReceiver.hxx  RtpEventTransmitter.cxx  RtpEventTransmitter.hxx  RtpPacket.cxx  RtpPacket.hxx  RtpReceiver.cxx  RtpReceiver.hxx  RtpSession.cxx  RtpSession.hxx  RtpTransmitter.cxx  RtpTransmitter.hxx  rtp.dsp  rtpCodec.cxx  rtpCodec.h  rtpTools.cxx  rtpTools.hxx  rtpTypes.h
rtsp/: README  TODO.txt  codeReview1.html  sampleTraces
sdp/: Makefile  README  TESTS  T_RESULTS.bin.debug.i686  T_RESULTS.bin.debug.sh
sip/: .cvsignore  Makefile
sip/gua/gui/src/: Makefile  Makefile.am  Makefile.in  Makefile.vid  PlayerThread.cpp  VideoEnable.h  VideoPreview.cpp  callbacks.c  callbacks.h  configuration.c  configuration.h  interface.c  interface.h  main.c  sipset
sip/gua/gui/src/.deps/: callbacks.Po  configuration.Po  interface.Po  main.Po  support.Po
sip/gua/gui/src/pixmaps/: registered.xpm  unregistered.xpm
stage/: FileDataStoreWrapper  LICENSE  LICENSE.txt  Makefile  Prototype  Prototype.tmpl  README  README_RTP.txt  README_SIP.txt  README_VOCAL.txt  ataOpFlags.txt  ataParams.txt  atatftp.pl  cdrserv  checkinstall  dependencies  filelist.conf  fs  hbs  hosts  in.tftpd  install.cfg  install.sh  manageusers  move_versions.pl  pkginfo  provgui  pserver  radiusClient  radiusServer  sample-b2bua-cfg.xml  sample-gua.cfg  sample-radius-client.cfg  sample-radius-server.cfg  sipset  verifysip  version.conf  vocal.spec  vocalbin.spec.in  vocalctl  (+3 more)
stund/: .cvsignore  Makefile  client.cxx  server.cxx  stun.cxx  stun.h  tlsServer.cxx  udp.cxx  udp.h
tools/: buildTokenRec  cApiBuilder  check-exit  config-pot  cppdoc-linkfarm  docify_inplace  find-class-name  list-unique  make-@pot-cfg  makeprefs  mgcp-debug  move-allinone  proxy-2600  proxyudp  proxyudp-2600  proxyudp-audiocodes  proxyudp-null  proxyudp-telogy  proxyudp-telogy-sdp  proxyudp-ubr924  run-tests  slocs  test-analyzer  tone.pl  verify-bin
util/: Application.cxx  Application.hxx  Base64.cxx  Base64.hxx  BugCatcher.cxx  BugCatcher.hxx  CWBuffer.cxx  CWBuffer.hxx  CountSemaphore.hxx  CryptoRandom.cxx  CryptoRandom.hxx  Daemon.cxx  Daemon.hxx  Data.hxx  Data2.cxx  Data2.hxx  DataException.cxx  DataException.hxx  DataStore.cxx  DataStore.hxx  FastMutex.hxx  Fifo.cc  Fifo.h  FifoBase.cc  FifoBase.h  FileDataStore.cxx  FileDataStore.hxx  FileStackLock.cxx  FileStackLock.hxx  Garbage.cxx  Garbage.hxx  GarbageCan.cxx  GarbageCan.hxx  HostMatch.cxx  HostMatch.hxx  Http_def.h  IOBuffer.cxx  IOBuffer.hxx  IOBufferv.cxx  IOBufferv.hxx  (+78 more)
vm/: README
vmclient/: Microphone.xpm  README  blankMicrophone.xpm  del.xpm  ff.xpm  play.xpm  rew.xpm  rewind.xpm  stop.xpm  vmclient
vocald/: Makefile  sample-vocald.conf  vocalctl  vocald  vocald-rc.sh
(+1717 files in other folders)
